# blazing-fast-idiomatic-rust

./: Cargo.toml  README.md
src/: main.rs
