[package]
name = "blazing-fast-idiomatic-rust"
version = "1.0.0"
edition = "2024"
description = "A blazing fast idiomatic Rust application"
license = "Blazing Fast Idiomatic License (BFIL)"

[[bin]]
name = "blazing-fast-idiomatic-rust"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros"] }
urlencoding = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true